fix: popup overflow

--- a/src/styles/components/elements/form-items/date-box.module.scss
+++ b/src/styles/components/elements/form-items/date-box.module.scss
@@ -98,6 +98,7 @@
 
 .popup {
   @include mixins.pickerShadow;
+  overflow: visible !important;
 }
 
 @include mixins.hoverAnimation;
